Refactor transaction and user models; add table names and improve address handling
- Updated Transaction and TransactionItem models to remove redundant table names in GORM tags and added TableName methods.
- Modified User model to include a TableName method and adjusted Phone field constraints.
- Enhanced AddressHandler with new endpoints to set and retrieve default addresses.
- Removed unused GetProfile endpoint from AuthHandler.
- Improved CategoryHandler with new endpoints for retrieving categories by slug and root categories.
- Updated router to include new address and category routes.
- Refactored AddressRepository to manage default addresses and improved query logic.
- Enhanced CategoryRepository with methods to get categories by slug and root categories.
- Updated AddressUsecase to handle default address logic during creation and updates.
- Added utility function for generating slugs and refactored product use case to use this utility.
- Improved user profile update logic to handle optional fields.
- Seed initial data migration updated to include bcrypt hashed password for admin user.
- Added utility package for slug generation.
