# docs/swagger.json
@@ -2037,58 +2037,6 @@
                 }
             }
         },
-        "/users/my": {
-            "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Get current user profile information",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Authentication"
-                ],
-                "summary": "Get user profile",
-                "responses": {
-                    "200": {
-                        "description": "Profile retrieved successfully",
-                        "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/response.Response"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "data": {
-                                            "$ref": "#/definitions/domain.User"
-                                        }
-                                    }
-                                }
-                            ]
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized",
-                        "schema": {
-                            "$ref": "#/definitions/response.Response"
-                        }
-                    },
-                    "404": {
-                        "description": "User not found",
-                        "schema": {
-                            "$ref": "#/definitions/response.Response"
-                        }
-                    }
-                }
-            }
-        },
         "/users/profile": {
             "get": {
                 "security": [
@@ -2279,10 +2227,13 @@
                 "name"
             ],
             "properties": {
-                "created_at": {
-                    "type": "string"
+                "children": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/domain.Category"
+                    }
                 },
-                "description": {
+                "created_at": {
                     "type": "string"
                 },
                 "id": {
@@ -2292,6 +2243,20 @@
                     "type": "string",
                     "maxLength": 100,
                     "minLength": 2
+                },
+                "parent": {
+                    "description": "Relations",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/domain.Category"
+                        }
+                    ]
+                },
+                "parent_id": {
+                    "type": "integer"
+                },
+                "slug": {
+                    "type": "string"
                 },
                 "updated_at": {
                     "type": "string"
@@ -2369,13 +2334,13 @@
                 "name"
             ],
             "properties": {
-                "description": {
-                    "type": "string"
-                },
                 "name": {
                     "type": "string",
                     "maxLength": 100,
                     "minLength": 2
+                },
+                "parent_id": {
+                    "type": "integer"
                 }
             }
         },
@@ -2678,9 +2643,6 @@
                     "maxLength": 100,
                     "minLength": 2
                 },
-                "photo_url": {
-                    "type": "string"
-                },
                 "rating": {
                     "type": "number"
                 },
@@ -2688,6 +2650,9 @@
                     "type": "string"
                 },
                 "updated_at": {
+                    "type": "string"
+                },
+                "url_fotol": {
                     "type": "string"
                 },
                 "user": {
@@ -2845,13 +2810,13 @@
                 "name"
             ],
             "properties": {
-                "description": {
-                    "type": "string"
-                },
                 "name": {
                     "type": "string",
                     "maxLength": 100,
                     "minLength": 2
+                },
+                "parent_id": {
+                    "type": "integer"
                 }
             }
         },
@@ -2895,12 +2860,24 @@
         },
         "domain.UpdateProfileRequest": {
             "type": "object",
-            "required": [
-                "name",
-                "phone"
-            ],
             "properties": {
+                "about": {
+                    "type": "string"
+                },
+                "city_id": {
+                    "type": "integer"
+                },
                 "date_of_birth": {
+                    "type": "string"
+                },
+                "gender": {
+                    "type": "string",
+                    "enum": [
+                        "L",
+                        "P"
+                    ]
+                },
+                "job": {
                     "type": "string"
                 },
                 "name": {
@@ -2912,6 +2889,9 @@
                     "type": "string",
                     "maxLength": 15,
                     "minLength": 10
+                },
+                "province_id": {
+                    "type": "integer"
                 }
             }
         },
@@ -2981,9 +2961,6 @@
                     "type": "string",
                     "maxLength": 15,
                     "minLength": 10
-                },
-                "photo_url": {
-                    "type": "string"
                 },
                 "province_id": {
                     "type": "integer"
